force-app/main/default/objects/Notification_SLA_Metadata__mdt/Notification_SLA_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>Notification SLA Metadata</label>
    <pluralLabel>Notification SLAs Metadata</pluralLabel>
</CustomObject>