force-app/main/default/objects/Notification_SLA_Metadata__mdt/fields/SLA_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>SLA_Duration_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Define the SLA, 7 Days is equivalent to 1 week</inlineHelpText>
    <label>SLA Duration Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>