force-app/main/default/objects/Notification_SLA_Metadata__mdt/fields/SLA_Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>SLA_Duration_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SLA Duration Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>