force-app/main/default/objects/Notification_SLA_Metadata__mdt/fields/SLA_Last_Notification__c.field-meta.xml
<CustomField>
    <fullName>SLA_Last_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA Last Notification</label>
    <type>Checkbox</type>
</CustomField>