force-app/main/default/objects/Notification_SLA_Metadata__mdt/fields/SLA_Object__c.field-meta.xml
<CustomField>
    <fullName>SLA_Object__c</fullName>
    <label>SLA Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>