force-app/main/default/objects/Notification_SLA_Metadata__mdt/fields/SLA_Type__c.field-meta.xml
<CustomField>
    <fullName>SLA_Type__c</fullName>
    <label>SLA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
                <default>true</default>
                <label>Simple</label>
            </value>
            <value>
                <fullName>With Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>