force-app/main/default/objects/Notification_SLA_Metadata__mdt/fields/SLA_Value__c.field-meta.xml
<CustomField>
    <fullName>SLA_Value__c</fullName>
    <label>SLA Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>